syntax = "proto3";

package store;

service ServiceRegistry {
  rpc RegisterService (ServiceRequest) returns (ServiceReply) {}
}

message ServiceRequest {
  string name = 1;
  repeated string labels = 2;
}

message ServiceReply {
  bool ok = 1;
  string result = 2;
}
